<resources>
    <string name="app_name">Iair</string>
    <string name="menuDashboard">Dashboard</string>
    <string name="menucreate_inf_message">Create Inf. Message</string>
    <string name="menulocation_list">Location list</string>
    <string name="menumap">Map</string>
    <string name="menusettings">Settings</string>
    <string name="menumy_hardware">My Hardware</string>
    <string name="activity_mySensors_textView_mySensors">My sensors</string>
    <string name="activity_mySensors_textViewTemperatureSensorName">Temperature</string>
    <string name="activity_mySensors_textView_pressureSensorName">Pressure</string>
    <string name="activity_mySensors_textView_humiditySensorName">Humidity</string>
    <string name="toast_no_humidity_sensor_available">No humidity sensor available</string>
    <string name="toast_no_pressure_sensor_available">No pressure sensor available</string>
    <string name="toast_no_temperature_sensor_available">No temperature sensor available</string>
    <string name="No_internet_message">No internet Available</string>
    <string name="No_gps_message">No GPS Available</string>
    <string name="No_data_message">No Data Available</string>
    <string name="txt_view_favorite_location">Favorite Location:</string>
    <string name="txt_dashboard_data">Data:</string>
    <string name="txtViewMsgInformative">Informative Message:</string>
    <string name="activity_dashboard_username">Username:</string>
    <string name="set_as_favorite_location">Set As Favorite Location</string>
    <string name="back">Back</string>
    <string name="preference_file_key">pt.ipleiria.dei.iair.favoriteLocation</string>
    <string name="create_informative_message">Create Informative Message</string>
    <string name="informative_message_type">Type</string>
    <string name="textViewDescription">Description:</string>
    <string name="textViewTimestamp">Timestamp:</string>
    <string name="buttonNow">Now</string>
    <string name="textViewLocation">Location:</string>
    <string name="buttonMapCreateInformativeMessage">Map</string>
    <string name="buttonCancelCreateInformativeMessage">Cancel</string>
    <string name="buttonSaveCreateInformativeMessage">Save</string>
    <string name="buttonSelectDateTimeCreateInformativeMessage">Select Timestamp</string>
    <string name="set_as_choose_this_location">Set As Location</string>
    <string name="choose_location">Choose Location</string>
    <string name="list_tab">List</string>
    <string name="graphical_tab">Graphical</string>
    <string name="oneDay">Daily</string>
    <string name="oneWeek">Weekly</string>
    <string name="oneMonth">Monthly</string>
    <string name="oneYear">Yearly</string>
    <string name="textView_notifications">Notifications</string>
    <string name="textView_time_interval">Time Interval</string>
    <string name="textView_settings_graphics">Graphics</string>
    <string name="textView_settings_alarms">Alarms</string>
    <string name="textView_alarm_radius">Alarm Radius</string>
    <string name="textView_favourite_location">My Favourite Location</string>
    <string name="editText_settings_location">Location</string>
    <string name="editText_settings_map">Map</string>


</resources>
