...
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewDescription" />

            <EditText
                android:id="@+id/editTextDescriptionCreateInformativeMessage"
                android:layout_width="match_parent"
                android:layout_height="106dp"
                android:ems="10"
                android:inputType="textMultiLine" />

            <View
...
                    android:id="@+id/spinnerLocations"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/imageGetMyLocationCreateInformativeMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_get_my_location" />

                <Button
...
