...
                    android:layout_width="match_parent"
                    android:layout_height="299dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ListView
                        android:id="@+id/listViewInformativeMessage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />
                </LinearLayout>

            </LinearLayout>
...
